panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__struct__test_braced_init_of_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct.c"
   (declaration external memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` ∅)
   (struct T~1
      (member x @0 `int`)
      (member cs @4 `array<char; 4>`)
      (member y @8 `int`)
      (member z @12 `int`))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (struct T~1
            (member x @0 `int`)
            (member cs @4 `array<char; 4>`)
            (member y @8 `int`)
            (member z @12 `int`))
         (definition t~4 `struct T~1 complete`
            (braced
               (subobject +0 (0x1234'5678 `int`))
               (subobject +4 (truncate `char` (1 `int`)))
               (subobject +5 (truncate `char` (2 `int`)))
               (subobject +6 (truncate `char` (3 `int`)))
               (subobject +7 (truncate `char` (4 `int`)))
               (subobject +8 (noop-type-conversion `int` (0xabcd'ef42 `unsigned int`)))))
         (definition bytes~5 `array<char; 16>`
            (braced
               (subobject +0 (truncate `char` (0x78 `int`)))
               (subobject +1 (truncate `char` (0x56 `int`)))
               (subobject +2 (truncate `char` (0x34 `int`)))
               (subobject +3 (truncate `char` (0x12 `int`)))
               (subobject +4 (truncate `char` (1 `int`)))
               (subobject +5 (truncate `char` (2 `int`)))
               (subobject +6 (truncate `char` (3 `int`)))
               (subobject +7 (truncate `char` (4 `int`)))
               (subobject +8 (truncate `char` (0x42 `int`)))
               (subobject +9 (truncate `char` (0xef `int`)))
               (subobject +10 (truncate `char` (0xcd `int`)))
               (subobject +11 (truncate `char` (0xab `int`)))
               (subobject +12 (truncate `char` (0 `int`)))
               (subobject +13 (truncate `char` (0 `int`)))
               (subobject +14 (truncate `char` (0 `int`)))
               (subobject +15 (truncate `char` (0 `int`)))))
         (return
            (call `int`
               (addressof `ptr<fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int>`
                  (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int`))
               (noop-type-conversion `ptr<void const>`
                  (addressof `ptr<struct T~1 complete>`
                     (t~4 `struct T~1 complete`)))
               (noop-type-conversion `ptr<void const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 16>>`
                        (bytes~5 `array<char; 16>`))))
               (sizeof `unsigned long` 16 (t~4 `struct T~1 complete`)))))))

----- stderr -----
