panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__struct__test_empty_braced_init_of_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/struct/test_empty_braced_init_of_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_empty_braced_init_of_struct.c"
   (declaration external memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int` ∅)
   (struct T~1
      (member x @0 `int`)
      (member cs @4 `array<char; 4>`)
      (member y @8 `int`))
   (function-definition external
      main~2 `fn() -> int`
      (compound-statement
         (definition zeroed_t~4 `struct T~1 complete` (braced ∅))
         (definition zeros~5 `array<char; 12>` (braced ∅))
         (return
            (call `int`
               (addressof `ptr<fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int>`
                  (memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: unsigned long) -> int`))
               (noop-type-conversion `ptr<void const>`
                  (addressof `ptr<struct T~1 complete>`
                     (zeroed_t~4 `struct T~1 complete`)))
               (noop-type-conversion `ptr<void const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 12>>`
                        (zeros~5 `array<char; 12>`))))
               (sizeof `unsigned long` 12 (zeroed_t~4 `struct T~1 complete`)))))))

----- stderr -----
