panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__initialisation__struct__test_nested_struct_with_string_literal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/initialisation/struct/test_nested_struct_with_string_literal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_nested_struct_with_string_literal.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (struct String~1
      (member ptr @0 `ptr<char const>`))
   (struct T~2
      (member string @0 `struct String~1 complete`)
      (member x @8 `int`))
   (function-definition external
      main~3 `fn() -> int`
      (compound-statement
         (struct T~2
            (member string @0 `struct String~1 complete`)
            (member x @8 `int`))
         (definition t~5 `struct T~2 complete`
            (braced
               (subobject +0
                  (noop-type-conversion `ptr<char const>`
                     (noop-type-conversion `ptr<char>`
                        (addressof `ptr<array<char; 12>>`
                           (string `array<char; 12>` "hello world\0")))))
               (subobject +8 (42 `int`))))
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%s\n\0"))))
               (deref `ptr<char const>`
                  (noop-type-conversion `ptr<ptr<char const>>`
                     (addressof `ptr<struct T~2 complete>`
                        (t~5 `struct T~2 complete`)))))))))

----- stderr -----
